# tsl

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt
.circleci/: config.yml
eigenvalues/: AeigensIV_16.txt  AeigensIV_18.txt  AeigensIV_21.txt  AeigensIV_22.txt  AeigensIV_26.txt  AeigensIV_29.txt  AeigensIV_30.txt  AeigensIV_31.txt  AeigensIV_32.txt  AeigensIV_33.txt  AeigensIV_35.txt  AeigensIV_36.txt  AeigensIV_37.txt  AeigensIV_38.txt  AeigensIV_39.txt  AeigensIV_40.txt  AeigensIV_42.txt  AeigensIV_43.txt  AeigensIV_47.txt  AeigensIV_49.txt  AeigensIV_50.txt  AeigensIV_51.txt  AeigensIV_52.txt  AeigensIV_53.txt  AeigensIV_54.txt  AeigensIV_55.txt  AeigensIV_56.txt  AeigensIV_58.txt  AeigensIV_59.txt  AeigensIV_60.txt  AeigensIV_61.txt  AeigensIV_63.txt  AeigensIV_7.txt  AeigensIV_8.txt  AeigensIV_9.txt  AeigensL_10.txt  AeigensL_16.txt  AeigensL_17.txt  AeigensL_19.txt  AeigensL_20.txt  (+60 more)
ext/imgui/: CMakeLists.txt  imconfig.h
include/tsl/: Application.hpp  Camera.hpp  Window.hpp  application.hpp  camera.hpp  gl_buffer.hpp  grid.hpp  mouse_pos.hpp  nubs.hpp  opengl.hpp  read_file.hpp  resolution.hpp  resolution.tcc  row.hpp  subdevision.hpp  tsplines.hpp  window.hpp
include/tsl/algorithm/: generator.hpp  get_vertices.hpp  get_vertices.tcc  reduction.hpp
include/tsl/attrmaps/: attr_maps.hpp  attribute_map.hpp  attribute_map.tcc  hash_map.hpp  hash_map.tcc  stable_vector.hpp  stable_vector.tcc  vector_map.hpp  vector_map.tcc
include/tsl/evaluation/: bsplines.hpp  subdevision.hpp  surface_evaluator.hpp  surface_evaluator.tcc
include/tsl/geometry/: half_edge.hpp  half_edge_face.hpp  half_edge_mesh.hpp  half_edge_mesh.tcc  half_edge_vertex.hpp  handles.hpp  line.hpp  line_segment.hpp  plane.hpp  rectangle.hpp  transform.hpp  vector.hpp
include/tsl/io/: obj.hpp
include/tsl/rendering/: half_edge_mesh.hpp  picking_map.hpp  tmesh.hpp
shader/: fragment.glsl  vertex.glsl
shader/normal/: vertex.glsl
shader/phong/: fragment.glsl  vertex.glsl
shader/picking/: fragment.glsl  vertex.glsl
shader/polygon/: geometry.glsl
shader/vertex/: geometry.glsl
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Window.cpp  application.cpp  benchmark.cpp  camera.cpp  gl_buffer.cpp  grid.cpp  main.cpp  nubs.cpp  opengl.cpp  read_file.cpp  subdevision.cpp  tsplines.cpp  window.cpp
src/algorithm/: get_vertices.cpp
src/evaluation/: bsplines.cpp  surface_evaluator.cpp
src/geometry/: half_edge_mesh.cpp  line.cpp  line_segment.cpp
src/geometry/tmesh/: iterator.cpp  tmesh.cpp
src/io/: obj.cpp
src/rendering/: half_edge_mesh.cpp  picking_map.cpp  tmesh.cpp
test/: CMakeLists.txt
test/include/tsl_tests/: mocks.hpp
test/include/tsl_tests/geometry/tmesh/: tmesh_fixtures.hpp
test/src/: CMakeLists.txt  subdevision_tests.cpp  tsplines_tests.cpp
test/src/attrmaps/: attribute_map_tests.cpp  stable_vector_tests.cpp
test/src/evaluation/: bsplines_tests.cpp  surface_evaluator_fixtures.cpp  surface_evaluator_tests.cpp
test/src/geometry/: half_edge_mesh_tests.cpp  line_tests.cpp  transform_tests.cpp
test/src/geometry/tmesh/: tmesh_fixtures.cpp  tmesh_tests.cpp
tse/: CMakeLists.txt  README.md  conanfile.txt
tse/ext/imgui/: CMakeLists.txt
tse/ext/pfd/: portable-file-dialogs.h
tse/include/tse/: application.hpp  camera.hpp  gl_buffer.hpp  mouse_pos.hpp  opengl.hpp  read_file.hpp  resolution.hpp  resolution.tcc  window.hpp
tse/include/tse/rendering/: grid.hpp  picking_map.hpp  tmesh.hpp
tse/shader/: fragment.glsl
tse/shader/normal/: fragment.glsl  geometry.glsl
tse/shader/phong/: vertex.glsl
tse/shader/picking/: fragment.glsl  vertex_without_geometry.glsl
tse/shader/polygon/: geometry.glsl
tse/shader/vertex/: geometry.glsl
tse/src/: CMakeLists.txt  application.cpp  camera.cpp  gl_buffer.cpp  main.cpp  opengl.cpp  read_file.cpp  window.cpp
tse/src/rendering/: grid.cpp  picking_map.cpp  tmesh.cpp
tsl/: CMakeLists.txt  README.md  conanfile.txt
tsl/eigenvalues/: AeigensIV_10.txt  AeigensIV_11.txt  AeigensIV_12.txt  AeigensIV_13.txt  AeigensIV_14.txt  AeigensIV_15.txt  AeigensIV_17.txt  AeigensIV_19.txt  AeigensIV_20.txt  AeigensIV_23.txt  AeigensIV_24.txt  AeigensIV_25.txt  AeigensIV_27.txt  AeigensIV_28.txt  AeigensIV_3.txt  AeigensIV_34.txt  AeigensIV_4.txt  AeigensIV_41.txt  AeigensIV_44.txt  AeigensIV_45.txt  AeigensIV_46.txt  AeigensIV_48.txt  AeigensIV_5.txt  AeigensIV_57.txt  AeigensIV_6.txt  AeigensIV_62.txt  AeigensIV_64.txt  AeigensL_11.txt  AeigensL_12.txt  AeigensL_13.txt  AeigensL_14.txt  AeigensL_15.txt  AeigensL_18.txt  AeigensL_21.txt  AeigensL_23.txt  AeigensL_25.txt  AeigensL_26.txt  AeigensL_27.txt  AeigensL_29.txt  AeigensL_30.txt  (+46 more)
tsl/include/tsl/: grid.hpp
tsl/include/tsl/algorithm/: generator.hpp  get_vertices.hpp  reduction.hpp
tsl/include/tsl/attrmaps/: attr_maps.hpp  attribute_map.hpp  attribute_map.tcc  hash_map.hpp  hash_map.tcc  stable_vector.hpp  stable_vector.tcc  vector_map.hpp
tsl/include/tsl/evaluation/: bsplines.hpp  bsplines.tcc  subdevision.hpp  surface_evaluator.hpp
tsl/include/tsl/geometry/: line.hpp  line_segment.hpp  plane.hpp  rectangle.hpp  transform.hpp
tsl/include/tsl/geometry/tmesh/: face.hpp  half_edge.hpp  handles.hpp  iterator.tcc  new_face_vertex.hpp  tmesh.hpp  tmesh.tcc  vertex.hpp
tsl/include/tsl/io/: obj.hpp
tsl/include/tsl/util/: base_handle.hpp  base_handle.tcc  println.hpp
tsl/src/: CMakeLists.txt  benchmark.cpp
tsl/src/algorithm/: generator.cpp  reduction.cpp
tsl/src/evaluation/: subdevision.cpp
tsl/src/geometry/: line.cpp  rectangle.cpp  transform.cpp
tsl/src/geometry/tmesh/: tmesh.cpp
tsl/test/: CMakeLists.txt
tsl/test/include/tsl_tests/evaluation/: surface_evaluator_fixtures.hpp
tsl/test/include/tsl_tests/geometry/tmesh/: tmesh_fixtures.hpp
tsl/test/src/: CMakeLists.txt  subdevision_tests.cpp
tsl/test/src/algorithm/: get_vertices_tests.cpp
tsl/test/src/evaluation/: bsplines_tests.cpp
tsl/test/src/geometry/: line_segment_tests.cpp  line_tests.cpp
tsl/test/src/geometry/tmesh/: tmesh_fixtures.cpp  tmesh_tests.cpp
(+11 files in other folders)
