add_executable(tsl_tests
    main.cpp
    attrmaps/stable_vector_tests.cpp
    attrmaps/attribute_map_tests.cpp
    geometry/line_segment_tests.cpp
    subdevision_tests.cpp
    geometry/line_tests.cpp
    geometry/tmesh/tmesh_tests.cpp
    geometry/tmesh/tmesh_fixtures.cpp
    geometry/transform_tests.cpp
    evaluation/bsplines_tests.cpp
    algorithm/get_vertices_tests.cpp
    evaluation/surface_evaluator_tests.cpp
    evaluation/surface_evaluator_fixtures.cpp
)

target_link_libraries(tsl_tests
    tsl
    gtest_main
    gmock_main
)
